--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Zona de Quedada</title>
+<title>Voluntariado BTT 2025</title>
 <style>
     body {
         font-family: 'Arial', sans-serif;
@@ -64,7 +64,7 @@
 
 <img src="mapa.png" alt="Imagen de la zona de quedada">
 
-<h1>Voluntariado Triatlón Nazari 2025</h1>
+<h1>Voluntariado BTT 2025</h1>
 
 <div class="punto"><strong>ZONA DE QUEDADA &ndash; CARPA</strong> <a href="https://maps.app.goo.gl/79zmQcqoyyW7NrC99?g_st=aw" target="_blank">Ver mapa</a></div>
 
