--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
 
-<img src="mapa.png" alt="Imagen de la zona de quedada">
+<img src="mapa.png" alt="Imagen de la zona de quedada" style="display: block; margin: 0 auto;">
 
 <h1>Voluntariado BTT 2025</h1>
 
