--- a/index.html
+++ b/index.html
@@ -68,38 +68,38 @@
 
 <div class="punto"><strong>ZONA DE QUEDADA &ndash; CARPA</strong> <a href="https://maps.app.goo.gl/79zmQcqoyyW7NrC99?g_st=aw" target="_blank">Ver mapa</a></div>
 
-<div class="punto">1 - Salida de la T1 acera. Este punto lo cubre <span class="nombre">CARLOS OLMO Y MANOLO PERALTA</span>, solo se usa hasta que salga el &uacute;ltimo deportista en bici. <a href="https://maps.app.goo.gl/hT3BuEZggfVN57o9A?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">2 - Entrada al circuito, avituallamiento, giro de segunda vuelta. Este punto ser&aacute; cubierto por <span class="nombre">EDUARDO JIMENEZ</span>. <a href="https://maps.app.goo.gl/xjEtFNQ7veY3RJFt7?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">3 - Salto de piedra y alternativas. Este punto si es posible ser&aacute; <span class="nombre">PROTECCION CIVIL</span>. <a href="https://maps.app.goo.gl/fRC873jAQ2idJNba7?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">4 - Inicio calle mayor Zaragoza. <span class="nombre">CABALLERO VERDE</span>. <a href="https://maps.app.goo.gl/F4dTqMmcFZgf1HBr7?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">5 - Fin calle mayor Zaragoza. <span class="nombre">CABALLERO VERDE</span>. <a href="https://maps.app.goo.gl/4uV9wEWoU1JwoSUn6?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">6 - Cruce en bajada adoquines. <span class="nombre">PABLITO</span> <a href="https://maps.app.goo.gl/qWqDaY6S4mD9haUS7?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">7 - Inicio escalera mirador y controlar el tramo de vuelta. <span class="nombre">PADRE CHIPI</span> <a href="https://maps.app.goo.gl/6a1yptcLeaVSk9uB8?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">8 - Mirador. Controlar el paso a la urbanizaci&oacute;n. <span class="nombre">JAVI MADRIDISTA</span> <a href="https://maps.app.goo.gl/ek7YjwNCEoMQeofw5?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">9 - Bajada mirador e intersecci&oacute;n rotonda. <span class="nombre">RAFA ORTEGA</span> <a href="https://maps.app.goo.gl/KhW4ZkiHvRiSa9XZ6?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">10 - Subida acera, entrada urbanizaci&oacute;n. <span class="nombre">DAVID MAQUINA</span> <a href="https://maps.app.goo.gl/i3WzgwY22b9PNgsR9?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">11 - Glorieta alta. <span class="nombre">CABALLERO VERDE JUANJO</span> <a href="https://maps.app.goo.gl/rpY6sETRzRRFCvAD6?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">12 - Glorieta alta entrada hotel. <span class="nombre">CABALLERO VERDE</span> <a href="https://maps.app.goo.gl/ycDV9LJ7VhyN4ga96?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">13 - Recta calle hotel. Este punto cubierto por dos voluntarios sobre todo la urbanizaci&oacute;n. <span class="nombre">FRAN CHARCUTERO Y JAIME</span> <a href="https://maps.app.goo.gl/C3K2k6KoZ37F6BSS7?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">14 - Glorieta fin de hotel. Evitar el paso de peatones al parque. <span class="nombre">FRANCIS PICHA</span> <a href="https://maps.app.goo.gl/qMfE2ex4hunrdMRP8?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">15 - Punto Oficial. <span class="nombre">CARMEN ALBALADEJO</span> <a href="https://maps.app.goo.gl/fhBb9nZdRPY6VQRP7?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">16 - Curva nueva chipipar. <span class="nombre">LUIS PERALTA</span> <a href="https://maps.app.goo.gl/aBji1c5tDRN8tkLG9?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">17 - Curva palet. <span class="nombre">MARCOS PERALTA</span> <a href="https://maps.app.goo.gl/fLQAZDjrB2j15PT87?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">18 - Subida en zig zag. <span class="nombre">PACO MOTRI</span> <a href="https://maps.app.goo.gl/motGwYZgdAizqSYj9?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">19 - Salto chipi parck. MUY IMPORTANTE <span class="nombre">PROTECCION CIVIL</span> <a href="https://maps.app.goo.gl/ycrsZGpeiXB2uQuS7?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">20 - Comienzo camino adoquines. Este a ser posible alguien del club para cubrir la carrera tambi&eacute;n. <span class="nombre">ALEX CABRERA</span> <a href="https://maps.app.goo.gl/HR22UojNmCPATRBt5?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">21 - Alto Adoquines y comprobar parte trasera de calabajio. <span class="nombre">JUANMI FEO</span> <a href="https://maps.app.goo.gl/7HfGvWa65BqpCbCD7?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">22 - Salida rotonda calabajio. <span class="nombre">PROTECCION CIVIL</span> <a href="https://maps.app.goo.gl/Lqjp4HMoKuwPQmBJA?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">23 - Giro acera alto. <span class="nombre">JONATHAN TORRES</span> <a href="https://maps.app.goo.gl/cQBVoeJ7LeZ5wxV49?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">24 - 1&ordf; escalera calabajio. <span class="nombre">PADRE VALENTIN</span> <a href="https://maps.app.goo.gl/fH817EsWYERTdwvt8?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">25 - Giro playa. <span class="nombre">ALEX PEREZ (CARRERA A PIE)</span> <a href="https://maps.app.goo.gl/diCuL8Fuj75xPTpx7?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">26 - Ba&ntilde;os pinos. <span class="nombre">JAVIER HOLGADO</span> <a href="https://maps.app.goo.gl/VbvJEsBCo1T9bdt97?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">27 - Salto doble chico. <span class="nombre">CHIKI</span> <a href="https://maps.app.goo.gl/9oWadCCN7pHBqmty8?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">28 - Mirador era. <span class="nombre">PRIMO ROBERTO</span> <a href="https://maps.app.goo.gl/GBTfLbn2WXx5NjhQ6?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">29 - Entrada zona 2. <span class="nombre">MANOLO CARIBE</span> <a href="https://maps.app.goo.gl/PCz97dp6C1HYZ2Kx5?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">30 - Enlace zona 1-2. <span class="nombre">JOSE MONTILLA</span> <a href="https://maps.app.goo.gl/RpN44PhD4Yj3cj2o6?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">31 - Entrada vuelta circuito escuela. <span class="nombre">CARMENCITA Y ANTONIO</span> <a href="https://maps.app.goo.gl/xeqDaufLWkdHjjkf9?g_st=aw" target="_blank">Ver mapa</a></div>
-<div class="punto">32 - Frente casa yayo. <span class="nombre">SERGIO AMBULANCIA</span> <a href="https://maps.app.goo.gl/XJDQ7VkbdL2Ph1DT6?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>1</b> - Salida de la T1 acera. Este punto lo cubre <span class="nombre">CARLOS OLMO Y MANOLO PERALTA</span>, solo se usa hasta que salga el &uacute;ltimo deportista en bici. <a href="https://maps.app.goo.gl/hT3BuEZggfVN57o9A?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>2</b> - Entrada al circuito, avituallamiento, giro de segunda vuelta. Este punto ser&aacute; cubierto por <span class="nombre">EDUARDO JIMENEZ</span>. <a href="https://maps.app.goo.gl/xjEtFNQ7veY3RJFt7?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>3</b> - Salto de piedra y alternativas. Este punto si es posible ser&aacute; <span class="nombre">PROTECCION CIVIL</span>. <a href="https://maps.app.goo.gl/fRC873jAQ2idJNba7?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>4</b> - Inicio calle mayor Zaragoza. <span class="nombre">CABALLERO VERDE</span>. <a href="https://maps.app.goo.gl/F4dTqMmcFZgf1HBr7?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>5</b> - Fin calle mayor Zaragoza. <span class="nombre">CABALLERO VERDE</span>. <a href="https://maps.app.goo.gl/4uV9wEWoU1JwoSUn6?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>6</b> - Cruce en bajada adoquines. <span class="nombre">PABLITO</span> <a href="https://maps.app.goo.gl/qWqDaY6S4mD9haUS7?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>7</b> - Inicio escalera mirador y controlar el tramo de vuelta. <span class="nombre">PADRE CHIPI</span> <a href="https://maps.app.goo.gl/6a1yptcLeaVSk9uB8?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>8</b> - Mirador. Controlar el paso a la urbanizaci&oacute;n. <span class="nombre">JAVI MADRIDISTA</span> <a href="https://maps.app.goo.gl/ek7YjwNCEoMQeofw5?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>9</b> - Bajada mirador e intersecci&oacute;n rotonda. <span class="nombre">RAFA ORTEGA</span> <a href="https://maps.app.goo.gl/KhW4ZkiHvRiSa9XZ6?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>10</b> - Subida acera, entrada urbanizaci&oacute;n. <span class="nombre">DAVID MAQUINA</span> <a href="https://maps.app.goo.gl/i3WzgwY22b9PNgsR9?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>11</b> - Glorieta alta. <span class="nombre">CABALLERO VERDE JUANJO</span> <a href="https://maps.app.goo.gl/rpY6sETRzRRFCvAD6?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>12</b> - Glorieta alta entrada hotel. <span class="nombre">CABALLERO VERDE</span> <a href="https://maps.app.goo.gl/ycDV9LJ7VhyN4ga96?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>13</b> - Recta calle hotel. Este punto cubierto por dos voluntarios sobre todo la urbanizaci&oacute;n. <span class="nombre">FRAN CHARCUTERO Y JAIME</span> <a href="https://maps.app.goo.gl/C3K2k6KoZ37F6BSS7?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>14</b> - Glorieta fin de hotel. Evitar el paso de peatones al parque. <span class="nombre">FRANCIS PICHA</span> <a href="https://maps.app.goo.gl/qMfE2ex4hunrdMRP8?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>15</b> - Punto Oficial. <span class="nombre">CARMEN ALBALADEJO</span> <a href="https://maps.app.goo.gl/fhBb9nZdRPY6VQRP7?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>16</b> - Curva nueva chipipar. <span class="nombre">LUIS PERALTA</span> <a href="https://maps.app.goo.gl/aBji1c5tDRN8tkLG9?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>17</b> - Curva palet. <span class="nombre">MARCOS PERALTA</span> <a href="https://maps.app.goo.gl/fLQAZDjrB2j15PT87?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>18</b> - Subida en zig zag. <span class="nombre">PACO MOTRI</span> <a href="https://maps.app.goo.gl/motGwYZgdAizqSYj9?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>19</b> - Salto chipi parck. MUY IMPORTANTE <span class="nombre">PROTECCION CIVIL</span> <a href="https://maps.app.goo.gl/ycrsZGpeiXB2uQuS7?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>20</b> - Comienzo camino adoquines. Este a ser posible alguien del club para cubrir la carrera tambi&eacute;n. <span class="nombre">ALEX CABRERA</span> <a href="https://maps.app.goo.gl/HR22UojNmCPATRBt5?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>21</b> - Alto Adoquines y comprobar parte trasera de calabajio. <span class="nombre">JUANMI FEO</span> <a href="https://maps.app.goo.gl/7HfGvWa65BqpCbCD7?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>22</b> - Salida rotonda calabajio. <span class="nombre">PROTECCION CIVIL</span> <a href="https://maps.app.goo.gl/Lqjp4HMoKuwPQmBJA?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>23</b> - Giro acera alto. <span class="nombre">JONATHAN TORRES</span> <a href="https://maps.app.goo.gl/cQBVoeJ7LeZ5wxV49?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>24</b> - 1&ordf; escalera calabajio. <span class="nombre">PADRE VALENTIN</span> <a href="https://maps.app.goo.gl/fH817EsWYERTdwvt8?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>25</b> - Giro playa. <span class="nombre">ALEX PEREZ (CARRERA A PIE)</span> <a href="https://maps.app.goo.gl/diCuL8Fuj75xPTpx7?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>26</b> - Ba&ntilde;os pinos. <span class="nombre">JAVIER HOLGADO</span> <a href="https://maps.app.goo.gl/VbvJEsBCo1T9bdt97?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>27</b> - Salto doble chico. <span class="nombre">CHIKI</span> <a href="https://maps.app.goo.gl/9oWadCCN7pHBqmty8?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>28</b> - Mirador era. <span class="nombre">PRIMO ROBERTO</span> <a href="https://maps.app.goo.gl/GBTfLbn2WXx5NjhQ6?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>29</b> - Entrada zona 2. <span class="nombre">MANOLO CARIBE</span> <a href="https://maps.app.goo.gl/PCz97dp6C1HYZ2Kx5?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>30</b> - Enlace zona 1-2. <span class="nombre">JOSE MONTILLA</span> <a href="https://maps.app.goo.gl/RpN44PhD4Yj3cj2o6?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>31</b> - Entrada vuelta circuito escuela. <span class="nombre">CARMENCITA Y ANTONIO</span> <a href="https://maps.app.goo.gl/xeqDaufLWkdHjjkf9?g_st=aw" target="_blank">Ver mapa</a></div>
+<div class="punto"><b>32</b> - Frente casa yayo. <span class="nombre">SERGIO AMBULANCIA</span> <a href="https://maps.app.goo.gl/XJDQ7VkbdL2Ph1DT6?g_st=aw" target="_blank">Ver mapa</a></div>
 
 </body>
 </html>
